// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should render correctly with  1`] = `
<div
  className="sc-bdvvtL bRkShw"
>
  
   alert
</div>
`;

exports[`Alert component should render correctly with center 1`] = `
<div
  className="sc-bdvvtL bRkShw"
>
  center
   alert
</div>
`;

exports[`Alert component should render correctly with danger 1`] = `
<div
  className="sc-bdvvtL caUzae"
>
  This is a 
  danger
   alert
</div>
`;

exports[`Alert component should render correctly with info 1`] = `
<div
  className="sc-bdvvtL bRkShw"
>
  This is a 
  info
   alert
</div>
`;

exports[`Alert component should render correctly with left 1`] = `
<div
  className="sc-bdvvtL fvJceI"
>
  left
   alert
</div>
`;

exports[`Alert component should render correctly with right 1`] = `
<div
  className="sc-bdvvtL dLrhcr"
>
  right
   alert
</div>
`;

exports[`Alert component should render correctly with success 1`] = `
<div
  className="sc-bdvvtL hsQKCq"
>
  This is a 
  success
   alert
</div>
`;

exports[`Alert component should render correctly with warning 1`] = `
<div
  className="sc-bdvvtL cDMzCb"
>
  This is a 
  warning
   alert
</div>
`;
